--- a/src/main/resources/templates/lesson05/quiz02.html
+++ b/src/main/resources/templates/lesson05/quiz02.html
@@ -40,10 +40,14 @@
 				<tr th:each="member : ${membership}">
 					<td th:text="${member.name}">이름</td>
 					<td th:text="${member.phoneNumber}">전화번호</td>
-					<td th:text="${member.grade}">등급</td>
-					<td th:text="${member.point}">
-						<span th:if="${member.point >= 5000}" class="text-primary" th:text="${member.point}">포인트</span>
-						<span th:unless="${member.point >= 5000}" th:text="${member.point}">포인트</span>
+					<td th:switch="${member.grade}">
+						<span th:case="'VIP'" class="text-danger" th:text="${member.grade}"></span>
+						<span th:case="'GOLD'" class="text-warning" th:text="${member.grade}"></span>
+						<span th:case="*" th:text="${member.grade}"></span>
+					</td>
+					<td>
+						<span th:if="${member.point >= 5000}" class="text-primary" th:text="${member.point} + 'P'">포인트</span>
+						<span th:unless="${member.point >= 5000}" th:text="|${member.point}P|">포인트</span>
 					</td>
 					<!-- <td th:if="${member.point >= 5000}" class="text-primary" th:text="${member.point}">포인트</td>
 					<td th:unless="${member.point >= 5000}" th:text="${member.point}">포인트</td> -->
