통나무펜션 3번 풀이 일부

--- a/src/main/resources/templates/booking/checkBooking.html
+++ b/src/main/resources/templates/booking/checkBooking.html
@@ -63,5 +63,44 @@
 	        </small>
 	    </footer>
 	</div>
+	
+	<script>
+		$(document).ready(function() {
+			// 조회 버튼
+			$("#checkBookingBtn").on('click', function() {
+				//alert("조회");
+				let name = $("#name").val().trim();
+				let phoneNumber = $("#phoneNumber").val().trim();
+				
+				if (!name) {
+					alert("이름을 입력하세요");
+					return;
+				}
+				
+				if (!phoneNumber) {
+					alert("번호를 입력하세요");
+					return;
+				}
+				
+				console.log(name);
+				console.log(phoneNumber);
+				
+				$.ajax({
+					// request
+					type:"POST"
+					, url:"/booking/check-booking"
+					, data:{"name":name, "phoneNumber":phoneNumber}
+					
+					// response
+					, success:function(data) {
+						
+					}
+					, error:function(error) {
+						alert("조회하는데 실패했습니다.");
+					}
+				});
+			});
+		});
+	</script>
 </body>
 </html>
